finish with first part

--- a/analysis_reliability.ipynb
+++ b/analysis_reliability.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "2c6ad279",
    "metadata": {},
    "outputs": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "202f1feb",
    "metadata": {},
    "outputs": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "3ebb6b83",
    "metadata": {},
    "outputs": [
@@ -127,18 +127,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "children            0\n",
-      "days_employed       0\n",
-      "dob_years           0\n",
-      "education           0\n",
-      "education_id        0\n",
-      "family_status       0\n",
-      "family_status_id    0\n",
-      "gender              0\n",
-      "income_type         0\n",
-      "debt                0\n",
-      "total_income        0\n",
-      "purpose             0\n",
+      "children               0\n",
+      "days_employed       2174\n",
+      "dob_years              0\n",
+      "education              0\n",
+      "education_id           0\n",
+      "family_status          0\n",
+      "family_status_id       0\n",
+      "gender                 0\n",
+      "income_type            0\n",
+      "debt                   0\n",
+      "total_income        2174\n",
+      "purpose                0\n",
       "dtype: int64\n"
      ]
     }
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "9f3abc28",
    "metadata": {},
    "outputs": [
@@ -166,18 +166,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0        142594.0\n",
-      "1        142594.0\n",
-      "2        142594.0\n",
-      "3        142594.0\n",
-      "4        118514.0\n",
-      "           ...   \n",
-      "21520    172357.0\n",
-      "21521    118514.0\n",
-      "21522    142594.0\n",
-      "21523    142594.0\n",
-      "21524    142594.0\n",
-      "Name: income_type, Length: 21402, dtype: float64\n"
+      "0        142594.396847\n",
+      "1        142594.396847\n",
+      "2        142594.396847\n",
+      "3        142594.396847\n",
+      "4        118514.486412\n",
+      "             ...      \n",
+      "21520    172357.950966\n",
+      "21521    118514.486412\n",
+      "21522    142594.396847\n",
+      "21523    142594.396847\n",
+      "21524    142594.396847\n",
+      "Name: income_type, Length: 21525, dtype: float64\n"
      ]
     }
    ],
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "6e78d549",
    "metadata": {},
    "outputs": [],
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "47ee393a",
    "metadata": {},
    "outputs": [
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "f81b16cd",
    "metadata": {},
    "outputs": [
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "1efa14d5",
    "metadata": {},
    "outputs": [
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "00170b7a",
    "metadata": {},
    "outputs": [
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "1098f016",
    "metadata": {},
    "outputs": [],
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "id": "a59cc055",
    "metadata": {},
    "outputs": [
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "id": "4562f881",
    "metadata": {},
    "outputs": [],
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "id": "de8c3aa8",
    "metadata": {},
    "outputs": [
@@ -442,10 +442,10 @@
      "output_type": "stream",
      "text": [
       "total_income_category\n",
-      "C    13913\n",
-      "B     5041\n",
-      "A     2128\n",
-      "D      350\n",
+      "C    15921\n",
+      "B     5014\n",
+      "D      349\n",
+      "A       25\n",
       "E       22\n",
       "Name: count, dtype: int64\n"
      ]
@@ -484,20 +484,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "272e09e3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['покупка жилья' 'приобретение автомобиля' 'дополнительное образование'\n",
+      " 'сыграть свадьбу' 'операции с жильем' 'образование'\n",
+      " 'на проведение свадьбы' 'покупка жилья для семьи' 'покупка недвижимости'\n",
+      " 'покупка коммерческой недвижимости' 'покупка жилой недвижимости'\n",
+      " 'строительство собственной недвижимости' 'недвижимость'\n",
+      " 'строительство недвижимости' 'на покупку подержанного автомобиля'\n",
+      " 'на покупку своего автомобиля' 'операции с коммерческой недвижимостью'\n",
+      " 'строительство жилой недвижимости' 'жилье'\n",
+      " 'операции со своей недвижимостью' 'автомобили' 'заняться образованием'\n",
+      " 'сделка с подержанным автомобилем' 'получение образования' 'автомобиль'\n",
+      " 'свадьба' 'получение дополнительного образования' 'покупка своего жилья'\n",
+      " 'операции с недвижимостью' 'получение высшего образования'\n",
+      " 'свой автомобиль' 'сделка с автомобилем' 'профильное образование'\n",
+      " 'высшее образование' 'покупка жилья для сдачи' 'на покупку автомобиля'\n",
+      " 'ремонт жилью' 'заняться высшим образованием']\n"
+     ]
+    }
+   ],
    "source": [
     "print(data['purpose'].unique())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "76b7bbbf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "purpose_category\n",
+      "операции с недвижимостью    10751\n",
+      "операции с автомобилем       4279\n",
+      "получение образования        3988\n",
+      "проведение свадьбы           2313\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
     "def categorize_purpose(purpose):\n",
     "    purpose_lower = purpose.lower()\n",
@@ -512,7 +547,9 @@
     "    else:\n",
     "        return 'другое'\n",
     "    \n",
-    "data['purpose_category'] = data['purpose'].apply(categorize_purpose)"
+    "data['purpose_category'] = data['purpose'].apply(categorize_purpose)\n",
+    "\n",
+    "print(data['purpose_category'].value_counts())"
    ]
   }
  ],
